# fastapi-practice

./: .gitignore  Dockerfile  README.md  TODO.md  books.py  books2.py  docker-compose.yaml  pyproject.toml  requirements.txt  todos.db
TodoApp/: config_for_database_url.py  database.py  main.py  models.py  todos.db  todosapp.db
TodoApp/alembic/: env.py
TodoApp/alembic/versions/: 0ed53e9d79d3_create_phone_number_for_user_column.py
TodoApp/routers/: admin.py  auth.py  todos.py  users.py
TodoApp/test/: test_admin.py  test_auth.py  test_example.py  test_todos.py  test_users.py  utils.py
TodoAppFullStack/: database.py  main.py
TodoAppFullStack/routers/: auth.py  todos.py  users.py
TodoAppFullStack/static/todo/css/: bootstrap.css  change-password.css  verify-user.css
TodoAppFullStack/templates/: add-todo.html  change-password.html  edit-todo.html  home.html  layout.html  login.html  navbar.html  register.html  verify-user.html
